# git-clone

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: install-hooks.sh
scripts/hooks/: pre-push
src/gitclone/: __init__.py  cli.py  errors.py  interfaces.py
tests/: __init__.py
