[tool.poetry]
name = "gitclone"
version = "0.1.0"
description = "A Git clone implementation for understanding version control internals"
readme = "README.md"
authors = ["Avaneesh Singh <avaneeshsingh242@gmail.com>"]
license = "MIT"
homepage = "https://github.com/YOUR_USERNAME/gitclone"
repository = "https://github.com/YOUR_USERNAME/gitclone"
documentation = "https://github.com/YOUR_USERNAME/gitclone#readme"
keywords = ["git", "version-control", "educational", "vcs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Education",
]
packages = [{include = "gitclone", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
mypy = "^1.0.0"
black = "^24.0.0"

[tool.poetry.scripts]
gitclone = "gitclone.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 80
target-version = ["py39"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
